Switched to Astro 7.6.0 (latest) with rux-checkbox overflow fix, removed workaround from index.scss (#20)

--- a/src/index.scss
+++ b/src/index.scss
@@ -38,7 +38,3 @@ p {
   line-height: var(--font-body-1-line-height);
   margin: var(--spacing-0);
 }
-
-rux-checkbox {
-  position: relative;
-}
